# ckb-vote-poc

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: Rust.yml
contracts/proposal-type-script/: Cargo.toml  README.md
contracts/proposal-type-script/src/: main.rs
contracts/sp1-test/: Cargo.toml
contracts/sp1-test/src/: entry.rs  error.rs
contracts/vote-type-script/: Cargo.toml  Makefile
contracts/vote-type-script/src/: main.rs
crates/testtool/: Cargo.toml
crates/testtool/src/: lib.rs
crates/testtool/tests/: generate_test.rs
crates/types/: Cargo.toml  Makefile  build.rs
crates/types/molecules/: types.mol
crates/types/src/: lib.rs
crates/types/src/molecules/: mod.rs  types.rs
crates/verification/: Cargo.toml
crates/verification/src/: lib.rs
crates/verification/tests/: README.md  integrity_test.rs
deployment/devnet/always-success/: deploy.sh  deployment.toml
deployment/devnet/always-success/migrations/: 2026-06-08-015327.json  2026-06-08-034913.json
deployment/devnet/proposal-type-script/: deploy.sh  deployment.toml
deployment/devnet/proposal-type-script/migrations/: 2026-06-08-020031.json  2026-06-08-034938.json
deployment/devnet/vote-type-script/: deploy.sh  deployment.toml
deployment/devnet/vote-type-script/migrations/: 2026-06-08-020235.json  2026-06-08-035010.json
devnet/: ckb.toml
docs/: guest-program-profiling.md  proposal-type-script.md  spec.md  treasure-lock-script.md  vote-type-script.md
docs/design/: README.md  zkvm-voting-blocks.drawio  zkvm-voting-flow.drawio  zkvm-voting.drawio
docs/knowledge/: ccc.md  ckb-cli.md  devnet.md
scripts/: find_clang
sdk/: README.md  package.json
sdk/src/: codec.ts  config.ts  index.ts  proposal.ts  utils.ts  vote.ts
sdk/src/cli/: index.ts  shared.ts
sdk/src/cli/commands/: check.ts  consume-proposal.ts  create-proposal.ts  dump-blocks.ts  query.ts  vote.ts
sp1/ckb-vote-verification/: AGENT.md  Cargo.toml  README.md  verifying-key.txt
sp1/ckb-vote-verification/program/: Cargo.toml
sp1/ckb-vote-verification/program/src/: main.rs
sp1/ckb-vote-verification/script/: .gitignore  Cargo.toml  build.rs
sp1/ckb-vote-verification/script/src/: lib.rs  main.rs  prove-via-network.rs
tests/: Cargo.toml
tests/src/: tests.rs
tools/block-dumper/: Cargo.toml
tools/block-dumper/src/: main.rs
tools/e2e/: .gitignore  README.md  continue-devnet-proof.sh  env.sh  run-devnet.sh  run-one.sh  start.sh
tools/fetch-proofs/: fetch_proofs.py  proof-stats.md  requirements.txt
