[package]
name = "ckb-vote-testtool"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
ckb-vote-types = { path = "../types" }
ckb-vote-verification = { path = "../verification" }
molecule = "0.9.2"
