[package]
name = "ckb-vote-types"
version = "0.1.0"
edition = "2024"

[features]
default = ["blockchain"]
blockchain = ["dep:ckb-gen-types"]

[dependencies]
ckb-gen-types = { version = "1.1.0", default-features = false, optional = true }
molecule = "0.9.2"

[build-dependencies]
molecule-codegen = "0.9.2"