[package]
name = "ckb-vote-verification"
version.workspace = true
edition.workspace = true

[dependencies]
ckb-vote-types = { path = "../types" }
ckb-hash = { version = "1.1.0", default-features = false, features = ["ckb-contract"] }
molecule = "0.9.2"
ckb-gen-types = { version = "1.1.0", default-features = false, optional = true }
