[package]
name = "ckb-vote-verification"
version.workspace = true
edition.workspace = true

[features]
profiling = []

[dependencies]
ckb-vote-types = { path = "../types" }
blake2 = { git = "https://github.com/RustCrypto/hashes.git", rev = "12105d3"}
molecule = "0.9.2"

[dev-dependencies]
merkle-cbt = "0.3.2"
