[workspace]
resolver = "2"
members = [
  "program",
  "script",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sp1-build = "6.0.2"
sp1-sdk = "6.0.2"
sp1-zkvm = { version = "6.0.2", features = ["lib"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
