[workspace]
resolver = "3"
members = [
  "program",
  "script",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
sp1-build = "6.1.0"
sp1-sdk = "6.1.0"
sp1-zkvm = { version = "6.1.0", features = ["lib"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
