[package]
name = "block-dumper"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
ckb-gen-types = "1"
ckb-vote-types = { path = "../../crates/types" }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
molecule = "0.9.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
