[package]
name = "ckb-vote-verification-script"
version.workspace = true
edition.workspace = true
default-run = "execute"
publish = false

[features]
profiling = ["sp1-sdk/profiling", "ckb-vote-verification/profiling"]

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
sp1-sdk = { workspace = true, features = ["network"] }
tokio = { workspace = true }
tracing = { workspace = true }
ckb-vote-verification = { path = "../../../crates/verification" }
ckb-vote-types = { path = "../../../crates/types" }
ckb-vote-testtool = { path = "../../../crates/testtool" }
molecule = "0.9.2"

[build-dependencies]
sp1-build = { workspace = true }

[[bin]]
name = "execute"
path = "src/main.rs"

